{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1060,
  "lineage": "7a1ecec0-70b3-42b6-57a9-b190728e4be7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ogurim_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef243bceee0b6e35",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:elastic-ip/eipalloc-0ef243bceee0b6e35",
            "association_id": "eipassoc-0cb149c844312219b",
            "domain": "vpc",
            "id": "eipalloc-0ef243bceee0b6e35",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0a803bd23a2f74357",
            "private_dns": "ip-10-0-0-21.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.21",
            "public_dns": "ec2-15-164-30-56.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.30.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6e6a06d11d7777d",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-076dee05e376815bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076dee05e376815bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037285532f4c169ff",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-43-201-56-111.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.56.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09150e205f8118b7e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02149a0d68883f69b",
            "tags": {
              "Name": "ogurim-weba"
            },
            "tags_all": {
              "Name": "ogurim-weba"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d035f2b80796bc4"
            ]
          },
          "dependencies": [
            "aws_security_group.ogurim_sg",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ogurim_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:internet-gateway/igw-0763da9ddbb87ac4e",
            "id": "igw-0763da9ddbb87ac4e",
            "owner_id": "339713119714",
            "tags": {
              "Name": "ogurim-ig"
            },
            "tags_all": {
              "Name": "ogurim-ig"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ogurim_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/ogurim-lb/64b873cbc5d57ced",
            "arn_suffix": "app/ogurim-lb/64b873cbc5d57ced",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ogurim-lb-918275137.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/ogurim-lb/64b873cbc5d57ced",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ogurim-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04d035f2b80796bc4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02149a0d68883f69b"
              },
              {
                "subnet_id": "subnet-090110e0727b51ada"
              }
            ],
            "subnets": [
              "subnet-02149a0d68883f69b",
              "subnet-090110e0727b51ada"
            ],
            "tags": {
              "Name": "ogurim-lb"
            },
            "tags_all": {
              "Name": "ogurim-lb"
            },
            "vpc_id": "vpc-09ad4071f81771e19",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.ogurim_sg",
            "aws_subnet.ogurim_weba",
            "aws_subnet.ogurim_webc",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ogurim_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:listener/app/ogurim-lb/64b873cbc5d57ced/0d491524bf6d6a91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/ogurim-albtg/3174b7550bcab9a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:listener/app/ogurim-lb/64b873cbc5d57ced/0d491524bf6d6a91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/ogurim-lb/64b873cbc5d57ced",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "ogurim-albli"
            },
            "tags_all": {
              "Name": "ogurim-albli"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ogurim_lb",
            "aws_lb_target_group.ogurim_albtg",
            "aws_security_group.ogurim_sg",
            "aws_subnet.ogurim_weba",
            "aws_subnet.ogurim_webc",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ogurim_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/ogurim-albtg/3174b7550bcab9a8",
            "arn_suffix": "targetgroup/ogurim-albtg/3174b7550bcab9a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/ogurim-albtg/3174b7550bcab9a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/ogurim-lb/64b873cbc5d57ced"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ogurim-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ogurim-albtg"
            },
            "tags_all": {
              "Name": "ogurim-albtg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ogurim_nig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef243bceee0b6e35",
            "association_id": "eipassoc-0cb149c844312219b",
            "connectivity_type": "public",
            "id": "nat-009ea9bd3a4d19b18",
            "network_interface_id": "eni-0a803bd23a2f74357",
            "private_ip": "10.0.0.21",
            "public_ip": "15.164.30.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02149a0d68883f69b",
            "tags": {
              "Name": "ogurim-nig"
            },
            "tags_all": {
              "Name": "ogurim-nig"
            }
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-0ec12f0914b8cf20d",
            "id": "rtb-0ec12f0914b8cf20d",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-009ea9bd3a4d19b18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ogurim-nrt"
            },
            "tags_all": {
              "Name": "ogurim-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_nat_gateway.ogurim_nig",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-05d129b0f495b4efe",
            "id": "rtb-05d129b0f495b4efe",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0763da9ddbb87ac4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ogurim-rt"
            },
            "tags_all": {
              "Name": "ogurim-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ogurim_ig",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_da",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b515b9c9012d089",
            "route_table_id": "rtb-0ec12f0914b8cf20d",
            "subnet_id": "subnet-084ea59ca544731bf"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_nat_gateway.ogurim_nig",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_dba",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_dc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f8a174074375f46",
            "route_table_id": "rtb-0ec12f0914b8cf20d",
            "subnet_id": "subnet-04618510a278d5c7d"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_nat_gateway.ogurim_nig",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_dbc",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_wa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07499ff7a817f798c",
            "route_table_id": "rtb-0ec12f0914b8cf20d",
            "subnet_id": "subnet-08d4924cef1644ce1"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_nat_gateway.ogurim_nig",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_wasa",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_wc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f1c629d94a850d",
            "route_table_id": "rtb-0ec12f0914b8cf20d",
            "subnet_id": "subnet-06c208ad47e736576"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_ig",
            "aws_nat_gateway.ogurim_nig",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_wasc",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ffea4992bda14e",
            "route_table_id": "rtb-05d129b0f495b4efe",
            "subnet_id": "subnet-02149a0d68883f69b"
          },
          "dependencies": [
            "aws_internet_gateway.ogurim_ig",
            "aws_route_table.ogurim_rt",
            "aws_subnet.ogurim_weba",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d40905c1884e71",
            "route_table_id": "rtb-05d129b0f495b4efe",
            "subnet_id": "subnet-090110e0727b51ada"
          },
          "dependencies": [
            "aws_internet_gateway.ogurim_ig",
            "aws_route_table.ogurim_rt",
            "aws_subnet.ogurim_webc",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-04d035f2b80796bc4",
            "description": "ssh-htp-mysql-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d035f2b80796bc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker_http",
                "from_port": 60080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ogurim-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ogurim-sg"
            },
            "tags_all": {
              "Name": "ogurim-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_dba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-084ea59ca544731bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ea59ca544731bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-dba"
            },
            "tags_all": {
              "Name": "ogurim-dba"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_dbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-04618510a278d5c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04618510a278d5c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-dbc"
            },
            "tags_all": {
              "Name": "ogurim-dbc"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_wasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-08d4924cef1644ce1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4924cef1644ce1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-wasa"
            },
            "tags_all": {
              "Name": "ogurim-wasa"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_wasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-06c208ad47e736576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c208ad47e736576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-wasc"
            },
            "tags_all": {
              "Name": "ogurim-wasc"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-02149a0d68883f69b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02149a0d68883f69b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-weba"
            },
            "tags_all": {
              "Name": "ogurim-weba"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_webc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-090110e0727b51ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090110e0727b51ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-webc"
            },
            "tags_all": {
              "Name": "ogurim-webc"
            },
            "vpc_id": "vpc-09ad4071f81771e19"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ogurim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:vpc/vpc-09ad4071f81771e19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05caf06f69d164e71",
            "default_route_table_id": "rtb-036e506266d106a1d",
            "default_security_group_id": "sg-03da247c5e0469989",
            "dhcp_options_id": "dopt-0a67717d8f23193c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ad4071f81771e19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036e506266d106a1d",
            "owner_id": "339713119714",
            "tags": {
              "Name": "ogurim-vpc"
            },
            "tags_all": {
              "Name": "ogurim-vpc"
            }
          }
        }
      ]
    }
  ]
}